--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,11 @@ Navbar
   margin: 0 auto;
   max-width: var(--fullWidth);
 }
+.nav-link {
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 24px;
+}
 .nav-links {
   display: flex;
   align-items: center;
